# yoneda-and-final-encodings

./: .gitignore  .vimrc  CHANGELOG.md  Makefile  README.md  final-encodings.cabal  yoneda-and-final-encodings.cabal
test/: doctests.hs
